--- a/ProjetoFinal_Titanic.ipynb
+++ b/ProjetoFinal_Titanic.ipynb
@@ -4,72 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Projeto Final - Análise dos Dados do Titanic"
+    "# Análise dos Dados do Titanic"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O Conjunto de dados foi o \"titanic-data-6.csv\".\n",
-    "Esse conjunto de dados tem por informação alguns dados dos que foram sobrevivente ou mortos."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Foram respondidas as seguintes perguntas:\n",
-    "\n",
-    "   1 - Entre as pessoas que sobreviveram e as pessoas mortas, quais tiveram um maior número?<br>\n",
-    "   2 - Qual grupo por faixa etária, teve a maior taxa de sobrevivência?<br>\n",
-    "   3 - Entre as classes que haviam no Titanic, qual sofreu maior perda?<br>\n",
-    "   4 - Por sexo, qual teve maior perda significativa?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Breve Descrição:\n",
-    "    \n",
-    "Depois de carregar os dados do csv, foi possível observar os dados e assim constatei que os campos\n",
-    "(Sobrevivente, Idade, ClasseBilhete, Sexo), seriam ideais para identificar os tipos de pessoas que tenham \n",
-    "morrido ou sobrevivido ao infeliz acidente."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Limpezas:\n",
-    "    \n",
-    "Foi verificado que o campo de ano contia valores nulos e com isso, todo valor nulo foi ajustado a média entre eles. Havia também registros com o tipo float e o mesmo foi convertido para inteiro;\n",
-    "        \n",
-    "Os campos foram renomeados;\n",
-    "    \n",
-    "Verificado se existem registros duplicados;\n",
-    "\n",
-    "Uma nova coluna para foi criada para categorizar a faíxa etária;\n",
-    "    \n",
-    "O campo Sexo foi ajustado para male == M e female == F."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Gráficos:\n",
-    "\n",
-    "\n",
-    "Estes foram feitos todos com gráfico de barras e tentando ao máximo trazer ao analista, maior clareza em relação aos dados utilizados e respondendo de forma simples e objetiva as perguntas que foram sugeridas."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Sites de Referências:\n",
+    "Links de Referências:\n",
     "\n",
     "http://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.plot.bar.html<br>\n",
     "https://pandas.pydata.org/pandas-docs/stable/generated/pandas.DataFrame.filter.html<br>\n",
